--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 db.driver = com.mysql.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/beermap_db
-db.username = sergio
-db.password = Ntktrjv2013
+db.username =
+db.password = 
 db.entity.package = com.sergiosiniy.beermap.server.entity
 
 db.initialSize = 30
