--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,3 +1,4 @@
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
 hibernate.hbm2dd1.auto = validate
+hibernate.format_sql=true
